--- a/Bind/Src/ModuloProyectosIniciativas.fx.yaml
+++ b/Bind/Src/ModuloProyectosIniciativas.fx.yaml
@@ -1991,7 +1991,7 @@ ModuloProyectosIniciativas As screen:
                     )
                 }
         DefaultSelectedItems: =Filter(Lst_Plan_Objetivos,ID=Value(First(ProyectoSeleccionado).Objetivo_Estrategico))
-        DisplayFields: =["NombreObjetivo"]
+        DisplayFields: =["AnnoObjetivo"]
         Height: =Txt_FondoSubViaje_10.Height - 10
         HoverBorderColor: =RGBA(0, 121, 187, 1)
         InputTextPlaceholder: =
@@ -2000,8 +2000,8 @@ ModuloProyectosIniciativas As screen:
         OnSelect: =
         PressedFill: =RGBA(0, 121, 187, 1)
         Reset: =ResetearControlPry
-        SearchFields: =["NombreObjetivo"]
-        SearchItems: =Search(Filter(Lst_Plan_Objetivos,IDPrioridad=Text(Dpd_Pry_PrioriEstrate.Selected.ID)),Dpd_Pry_ObjeEstr.SearchText,"NombreObjetivo")
+        SearchFields: =["AnnoObjetivo"]
+        SearchItems: =Search(Filter(Lst_Plan_Objetivos,IDPrioridad=Text(Dpd_Pry_PrioriEstrate.Selected.ID)),Dpd_Pry_ObjeEstr.SearchText,"AnnoObjetivo")
         SelectMultiple: =false
         Width: =Txt_FondoSubViaje_10.Width - 27
         X: =513
@@ -2220,7 +2220,7 @@ ModuloProyectosIniciativas As screen:
             =If(Dpd_Pry_TipoPry_1.Selected.Value="Llave en mano" || Rd_Pry_Discovery.Selected.Value="SI"||!(First(ProyectoSeleccionado).'Categoría Iniciativa'.Value="Producto Tecnológico"),[],
                 Filter(Col_BD_Equipos, IDEquipo =First(ProyectoSeleccionado).IDEquipo))
         DisabledColor: =RGBA(77, 77, 77, 1)
-        DisplayFields: =["ComplianceAssetId"]
+        DisplayFields: =["Equipo_x002f_Squad"]
         DisplayMode: =If(Dpd_Pry_TipoPry_1.Selected.Value="Llave en mano" || Rd_Pry_Discovery.Selected.Value="SI" || !(First(ProyectoSeleccionado).'Categoría Iniciativa'.Value="Producto Tecnológico"),DisplayMode.Disabled,DisplayMode.Edit)
         Height: =Txt_FondoEquipo_14.Height - 10
         HoverBorderColor: =RGBA(0, 121, 187, 1)
@@ -2240,7 +2240,7 @@ ModuloProyectosIniciativas As screen:
         OnSelect: =
         PressedFill: =RGBA(0, 121, 187, 1)
         Reset: =ResetearControlPry
-        SearchFields: =["ComplianceAssetId"]
+        SearchFields: =["Equipo_x002f_Squad"]
         SearchItems: |-
             =Search(SortByColumns( Filter(Col_BD_Equipos, IDGerencia = "Ger-355B1687-6EA9-89B5-55E1-C5408DE50A63",Estado="Activo"),"Equipo_x002f_Squad",SortOrder.Ascending)
             /*If(
@@ -2252,7 +2252,7 @@ ModuloProyectosIniciativas As screen:
                 );
                 Blank()
             )*/
-            ,Cmb_Gl_Equipo_1.SearchText,"ComplianceAssetId")
+            ,Cmb_Gl_Equipo_1.SearchText,"Equipo_x002f_Squad")
         SelectMultiple: =false
         Width: =Txt_FondoEquipo_14.Width - 27
         X: =1220
@@ -2827,7 +2827,7 @@ ModuloProyectosIniciativas As screen:
                         )
                     )
                 )
-            DisplayFields: =["Claims"]
+            DisplayFields: =["DisplayName","Email","Picture"]
             DisplayMode: |-
                 =If(
                     Chk_AplicaDatos_1.Checked,
@@ -2929,7 +2929,7 @@ ModuloProyectosIniciativas As screen:
                     )
                 )
             DisabledColor: =RGBA(128, 128, 128, 1)
-            DisplayFields: =["Claims"]
+            DisplayFields: =["DisplayName","Email","Picture"]
             DisplayMode: |-
                 =If(
                     Chk_AplicaUx_1.Checked,
