--- a/Bind/Src/ModuloRiesgosServTech.fx.yaml
+++ b/Bind/Src/ModuloRiesgosServTech.fx.yaml
@@ -807,7 +807,7 @@ ModuloRiesgosServTech As screen:
                             )
                         }
                     )
-                DisplayFields: =["Claims"]
+                DisplayFields: =["DisplayName","Email","Picture"]
                 Height: =Txt_FondoResponsable_1.Height - 10
                 HoverBorderColor: =RGBA(0, 121, 187, 1)
                 InputTextPlaceholder: ="Buscar responsable"
