--- a/Bind/Src/ServiciosTech.fx.yaml
+++ b/Bind/Src/ServiciosTech.fx.yaml
@@ -660,7 +660,7 @@ ServiciosTech As screen:
             ChevronHoverBackground: =RGBA(0, 121, 187, 1)
             DefaultSelectedItems: |-
                 =//Table({DisplayName:_Perfil.displayName})
-            DisplayFields: =["Claims"]
+            DisplayFields: =["DisplayName","Email","Picture"]
             DisplayMode: |-
                 =
                     DisplayMode.Edit
@@ -742,7 +742,7 @@ ServiciosTech As screen:
             ChevronFill: =RGBA(0, 121, 187, 1)
             ChevronHoverBackground: =RGBA(0, 121, 187, 1)
             DefaultSelectedItems: =
-            DisplayFields: =["ComplianceAssetId"]
+            DisplayFields: =["Title"]
             DisplayMode: |-
                 =
                     DisplayMode.Edit
@@ -753,8 +753,7 @@ ServiciosTech As screen:
                 =Filter(Col_BD_Dominios,
                 IDDominio="Via-F0530905-33AC-1567-7C50-3BF2EFCF230A" || 
                 IDDominio="Via-EFF1A142-75C7-8AD8-4CCA-C645097B0BA4" ||
-                IDDominio="Via-F0530905-33AC-1567-7C50-3BF2EFCFP7K8"
-                )//||IDDominio="Via-FDB30966-A6C1-2FAC-8856-34429C2AA582"
+                IDDominio="Via-F0530905-33AC-1567-7C50-3BF2EFCFP7K8")
             OnChange: |
                 =UpdateContext({_VarMostrarCuadroBloqueo:false});
                 If(
@@ -765,13 +764,12 @@ ServiciosTech As screen:
                 )
             PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
             PressedFill: =RGBA(0, 121, 187, 1)
-            SearchFields: =["ComplianceAssetId"]
+            SearchFields: =["Title"]
             SearchItems: |-
                 =Search(Filter(Col_BD_Dominios,
                 IDDominio="Via-F0530905-33AC-1567-7C50-3BF2EFCF230A" || 
                 IDDominio="Via-EFF1A142-75C7-8AD8-4CCA-C645097B0BA4" ||
-                IDDominio="Via-F0530905-33AC-1567-7C50-3BF2EFCFP7K8"
-                )//||IDDominio="Via-FDB30966-A6C1-2FAC-8856-34429C2AA582",Cmb_FiltroNombre_6.SearchText,"ComplianceAssetId")
+                IDDominio="Via-F0530905-33AC-1567-7C50-3BF2EFCFP7K8"),Cmb_FiltroNombre_6.SearchText,"Title")
             SelectionFill: =RGBA(0, 121, 187, 1)
             SelectMultiple: =false
             Tooltip: =
@@ -790,7 +788,7 @@ ServiciosTech As screen:
             ChevronFill: =RGBA(0, 121, 187, 1)
             ChevronHoverBackground: =RGBA(0, 121, 187, 1)
             DefaultSelectedItems: =
-            DisplayFields: =["AreadeImpacto"]
+            DisplayFields: =["Nombre_x0020_Producto_x002f_Proy"]
             DisplayMode: |-
                 =
                     DisplayMode.Edit
@@ -812,14 +810,14 @@ ServiciosTech As screen:
                 )
             PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
             PressedFill: =RGBA(0, 121, 187, 1)
-            SearchFields: =["AreadeImpacto"]
+            SearchFields: =["Nombre_x0020_Producto_x002f_Proy"]
             SearchItems: |-
                 =Search(Filter(Col_DominiosGestion,
                 (IDDominio="Via-F0530905-33AC-1567-7C50-3BF2EFCF230A" || 
                 IDDominio="Via-EFF1A142-75C7-8AD8-4CCA-C645097B0BA4" || 
                 IDDominio="Via-FDB30966-A6C1-2FAC-8856-34429C2AA582")
                 &&Estado<>"Inactivo")
-                ,Cmb_FiltroNombre_7.SearchText,"AreadeImpacto")
+                ,Cmb_FiltroNombre_7.SearchText,"Nombre_x0020_Producto_x002f_Proy")
             SelectionFill: =RGBA(0, 121, 187, 1)
             SelectMultiple: =false
             Tooltip: =
