--- a/Bind/Src/ListadoIniciativas.fx.yaml
+++ b/Bind/Src/ListadoIniciativas.fx.yaml
@@ -977,7 +977,7 @@ ListadoIniciativas As screen:
             ChevronHoverBackground: =RGBA(0, 121, 187, 1)
             DefaultSelectedItems: |-
                 =Table({DisplayName:_Perfil.displayName})
-            DisplayFields: =["NombreObjetivo"]
+            DisplayFields: =["AnnoObjetivo"]
             DisplayMode: |-
                 =If(
                     _VarVerPopUpPortafolio,
@@ -998,8 +998,8 @@ ListadoIniciativas As screen:
                 )
             PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
             PressedFill: =RGBA(0, 121, 187, 1)
-            SearchFields: =["NombreObjetivo"]
-            SearchItems: =Search(Lst_Plan_Objetivos,Cmb_FiltroNombre_8.SearchText,"NombreObjetivo")
+            SearchFields: =["AnnoObjetivo"]
+            SearchItems: =Search(Lst_Plan_Objetivos,Cmb_FiltroNombre_8.SearchText,"AnnoObjetivo")
             SelectionFill: =RGBA(0, 121, 187, 1)
             SelectMultiple: =false
             Tooltip: =
