--- a/Bind/Src/Mantenedores.fx.yaml
+++ b/Bind/Src/Mantenedores.fx.yaml
@@ -1775,7 +1775,7 @@ Mantenedores As screen:
                 ChevronHoverBackground: =RGBA(0, 121, 187, 1)
                 DefaultSelectedItems: =
                 DisabledColor: =RGBA(102, 102, 102, 1)
-                DisplayFields: =["DisplayName","Email","Picture"]
+                DisplayFields: =["Claims"]
                 DisplayMode: =Parent.DisplayMode
                 Height: =Txt_FondoForm1_189.Height -10
                 HoverBorderColor: =RGBA(0, 121, 187, 1)
