--- a/Bind/Src/ListadoIniciativas.fx.yaml
+++ b/Bind/Src/ListadoIniciativas.fx.yaml
@@ -907,7 +907,7 @@ ListadoIniciativas As screen:
                         Table({DisplayName:_Perfil.displayName, Claims:_Perfil.userPrincipalName})
                     )
                 )
-            DisplayFields: =["AreadeImpacto"]
+            DisplayFields: =["Nombre_x0020_Producto_x002f_Proy"]
             DisplayMode: |
                 =
                         DisplayMode.Edit
