--- a/Bind/Src/EdicionFcst.fx.yaml
+++ b/Bind/Src/EdicionFcst.fx.yaml
@@ -2077,7 +2077,7 @@ EdicionFcst As screen:
                     PressedFill: =RGBA(0, 121, 187, 1)
                     Reset: =ResetearControlPry
                     SearchFields: =["Ceco"]
-                    SearchItems: =Search(Lst_Fcst_MantenedorCeco,DataCardValue52_3.SearchText,"Ceco")
+                    SearchItems: =[]
                     SelectionFill: =RGBA(0, 121, 187, 1)
                     SelectMultiple: =false
                     TabIndex: =6
@@ -2229,7 +2229,7 @@ EdicionFcst As screen:
                     PressedFill: =RGBA(0, 121, 187, 1)
                     Reset: =ResetearControlPry
                     SearchFields: =["ComplianceAssetId"]
-                    SearchItems: =Search(Lst_Fcst_MantenedorCuenta,DataCardValue53_2.SearchText,"ComplianceAssetId")
+                    SearchItems: =[]
                     SelectionFill: =RGBA(0, 121, 187, 1)
                     SelectMultiple: =false
                     TabIndex: =6
@@ -2334,7 +2334,7 @@ EdicionFcst As screen:
                     PressedFill: =RGBA(0, 121, 187, 1)
                     Reset: =ResetearControlPry
                     SearchFields: =["ComplianceAssetId"]
-                    SearchItems: =Search(Lst_Fcst_MantenedorCuenta,DataCardValue51_3.SearchText,"ComplianceAssetId")
+                    SearchItems: =[]
                     SelectionFill: =RGBA(0, 121, 187, 1)
                     SelectMultiple: =false
                     TabIndex: =6
