--- a/Bind/Src/Components/Component1.fx.yaml
+++ b/Bind/Src/Components/Component1.fx.yaml
@@ -289,7 +289,7 @@ Component1 As CanvasComponent:
             Image: |-
                 =If(
                     !(ThisItem.Título = "Proyectos Finalizados !!"),
-                    ImagenMarzo,
+                    ImagenAbril,
                     '02'
                 )
             ImagePosition: |-
