--- a/Bind/Src/ModuloGestionEquipoV1.fx.yaml
+++ b/Bind/Src/ModuloGestionEquipoV1.fx.yaml
@@ -233,7 +233,7 @@ ModuloGestionEquipoV1 As screen:
                     )
                 FontSize: =14
                 Height: =30
-                Items: =["","SPA", "BAU"]
+                Items: =["","SPA", "BAU", "SPA + BAU"]
                 OnChange: |-
                     =Patch(Ingresos_Ceses_Personas, LookUp(Ingresos_Ceses_Personas, ID = ThisItem.IDe), {TipoTrabajo: Dpd_TipoTrabajo.Selected.Value });
                     Patch(Col_EquipoOrdenados, LookUp(Col_EquipoOrdenados, Orden = ThisItem.Orden), {TipoTrabajo: Dpd_TipoTrabajo.Selected.Value })
