--- a/Bind/CanvasManifest.json
+++ b/Bind/CanvasManifest.json
@@ -173,6 +173,7 @@
     "ModuloEquipoV1",
     "ModuloGestionEquipoV1",
     "ModuloRevisionFormatos",
-    "ModuloRevisionFormatosDetalle"
+    "ModuloRevisionFormatosDetalle",
+    "ProbarAqui"
   ]
 }
